# data-efficiency

./: .gitignore  README.md  pyproject.toml  train_all_diversity_strategies.sh  train_all_strategies.py  train_all_strategies.sh  train_full_with_tuning.sh
artifacts/aflite_readability_30epochs/: metrics.csv
artifacts/el2n_30epochs/: metrics.csv
artifacts/eval_all_with_tuning_v2/: metrics.csv
artifacts/eval_edfs_lite_strategy/: metrics.csv
artifacts/eval_entropy_diversity_strategy/: metrics.csv
artifacts/eval_k_center_strategy/: metrics.csv
artifacts/eval_lexical_diversity_strategy/: metrics.csv
artifacts/eval_qdit_lite_strategy/: metrics.csv
artifacts/eval_random_strategy/: metrics.csv
artifacts/ifd_30epochs/: metrics.csv
artifacts/perplexity_30epochs/: metrics.csv
configs/: eval_all.json  eval_config_aflite_readability.json  eval_config_el2n.json  eval_config_example.json  eval_config_ifd.json  eval_config_perplexity.json  eval_edfs_lite.json  eval_entropy_diversity.json  eval_full_with_tuning.json  eval_k_center.json  eval_lexical_diversity.json  eval_qdit_lite.json  eval_random.json  train_config_aflite_readability.json  train_config_edfs_lite.json  train_config_el2n.json  train_config_entropy_diversity.json  train_config_example.json  train_config_full.json  train_config_ifd.json  train_config_k_center.json  train_config_lexical_diversity.json  train_config_perplexity.json  train_config_qdit_lite.json  train_config_random.json  train_config_with_tuning.json  train_config_with_tuning_local.json
src/data_efficiency/: config.py  data.py  model.py  (+4 more)
(+25 files in other folders)
