[project]
name = "data-efficiency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clearml>=1.13.0",
    "click>=8.1.0",
    "datasets>=4.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.12.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
download_dataset = "data_efficiency.utils.data:download_dataset"
run = "data_efficiency.run:main"
evaluate = "data_efficiency.evaluate:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
fixable = ["I", "E", "W"]

ignore = [
    "B904",  # Поднятие ошибок в except
    "B008",  # Depends
    "E712",  # Использование == False
]
